k8s/manifests/checkoutservice-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice-deployment
  namespace: boutique
  labels:
    app: checkoutservice   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkoutservice   
  template:
    metadata:
      labels:
        app: checkoutservice 
    spec:   
      containers:
      - name: checkoutservicecontainer
        image: pavankumarkothala31/checkoutservice:v1
        ports:
        - containerPort: 5050
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          grpc:
            port: 5050
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          grpc:
            port: 5050
