k8s/manifests/adservice-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice-deployment
  namespace: boutique
  labels:
    app: adservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:                        
      containers:
      - name: adservicecontainer
        image: pavankumarkothala31/adservice:v1
        ports:
        - containerPort: 9555
        resources:
          requests:
            cpu: "200m"
            memory: "180Mi"      # ← FIXED: Java needs more memory
          limits:
            cpu: "300m"
            memory: "300Mi"      # ← FIXED: was 128Mi, Java gets OOMKilled
        readinessProbe:
          initialDelaySeconds: 20  # ← FIXED: Java takes longer to start
          periodSeconds: 15
          grpc:
            port: 9555
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 15
          grpc:
            port: 9555
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: adservice
  ports:
  - name: grpc
    port: 9555
    targetPort: 9555
