k8s/manifests/cartservice-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice-deployment
  namespace: boutique
  labels:
    app: cartservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:                        
      containers:
      - name: cartservicecontainer
        image: pavankumarkothala31/cartservice:v1
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
        readinessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          grpc:
            port: 7070
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          grpc:
            port: 7070
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: cartservice
  ports:
  - name: grpc
    protocol: TCP
    port: 7070
    targetPort: 7070
