k8s/manifests/currencyservice-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice-deployment
  namespace: boutique
  labels:
    app: currencyservice   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currencyservice   
  template:
    metadata:
      labels:
        app: currencyservice 
  spec:
    containers:
    - name: currencyservicecontainer
      image: pavankumarkothala31/currencyservice:v1
      ports:
        - containerPort: 7000
      resources:
        requests:
          cpu: "100m"
          memory: "64Mi"
        limits:
          cpu: "200m"
          memory: "128Mi"

      readinessProbe:
        initialDelaySeconds: 10
        periodSeconds: 10
        grpc:
          port: 7000
      livenessProbe:
        initialDelaySeconds: 10
        periodSeconds: 10
        grpc:
          port: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice   
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: currencyservice   
  ports:
  - name: grpc
    port: 7000
    targetPort: 7000
