k8s/manifests/emailservice-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice-deployment
  namespace: boutique
  labels:
    app: emailservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:                        
      containers:
      - name: emailservicecontainer
        image: pavankumarkothala31/emailservice:v1
        ports:
        - containerPort: 5000   
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          grpc:
            port: 5000          
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          grpc:
            port: 5000          
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: emailservice
  ports:
  - name: grpc
    port: 5000
    targetPort: 5000            # ← FIXED: both 5000 now
