k8s/manifests/frontend-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: boutique
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
  spec:
    containers:
    - name: frontendcontainer
      image: pavankumarkothala31/frontend:v1
      ports:
        - containerPort: 8080
      resources:
        requests:
          cpu: "100m"
          memory: "64Mi"
        limits:
          cpu: "200m"
          memory: "128Mi"

      readinessProbe:
        initialDelaySeconds: 10
        httpGet:
          path: "/_healthz"
          port: 8080
      livenessProbe:
        initialDelaySeconds: 10
        httpGet:
          path: "/_healthz"
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontendservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
