k8s/manifests/paymentservice-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice-deployment
  namespace: boutique
  labels:
    app: paymentservice  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice  
  template:
    metadata:
      labels:
        app: paymentservice 
  spec:
    containers:
    - name: paymentservicecontainer
      image: pavankumarkothala31/paymentservice:v1
      ports:
        - containerPort: 50051
      resources:
        requests:
          cpu: "100m"
          memory: "64Mi"
        limits:
          cpu: "200m"
          memory: "128Mi"

      readinessProbe:
        initialDelaySeconds: 10
        periodSeconds: 10
        grpc:
          port: 50051
      livenessProbe:
        initialDelaySeconds: 10
        periodSeconds: 10
        grpc:
          port: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice  
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: paymentservice  
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
