k8s/manifests/productcatalogservice-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice-deployment
  namespace: boutique
  labels:
    app: productcatalogservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      containers:
      - name: productcatalogservicecontainer
        image: pavankumarkothala31/productcatalogservice:v1
        ports:
        - containerPort: 3550
        readinessProbe:
          grpc:
            port: 3550
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          grpc:
            port: 3550
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  namespace: boutique
spec:
  selector:
    app: productcatalogservice
  ports:
  - port: 3550
    targetPort: 3550
