k8s/manifests/recommendationservice-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice-deployment
  namespace: boutique
  labels:
    app: recommendationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
  spec:
    containers:
    - name: recommendationservicecontainer
      image: pavankumarkothala31/recommendationservice:v1
      ports:
        - containerPort: 8080
      resources:
        requests:
          cpu: "100m"
          memory: "64Mi"
        limits:
          cpu: "200m"
          memory: "128Mi"

      readinessProbe:
        initialDelaySeconds: 10
        periodSeconds: 10
        grpc:
          port: 8080
      livenessProbe:
        initialDelaySeconds: 10
        periodSeconds: 10
        grpc:
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: recommendationservice
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
