k8s/manifests/redis-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
  namespace: boutique
  labels:
    app: redis-cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cart
  template:
    metadata:
      labels:
        app: redis-cart
  spec:
    containers:
    - name: redis
      image: redis:alpine
      ports:
      - containerPort: 6379
      readinessProbe:
        tcpSocket:
          port: 6379
        periodSeconds: 5
        initialDelaySeconds: 10
      livenessProbe:
        tcpSocket:
          port: 6379
        periodSeconds: 5
        initialDelaySeconds: 10
      volumeMounts:
      - mountPath: /data
        name: redis-data
      resources:
        requests:
          cpu: 70m
          memory: 200Mi
        limits:
          cpu: 125m
          memory: 256Mi
    volumes:
    - name: redis-data
      emptyDir: {}
   
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: redis-cart
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: 6379
