k8s/manifests/shippingservice-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice-deployment
  namespace: boutique
  labels:
    app: shippingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      containers:
      - name: shippingservicecontainer
        image: pavankumarkothala31/shippingservice:v1
        ports:
        - containerPort: 50051
        readinessProbe:
          grpc:
            port: 50051
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          grpc:
            port: 50051
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
  namespace: boutique
spec:
  selector:
    app: shippingservice
  ports:
  - port: 50051
    targetPort: 50051
