k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: boutique
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: pavan-boutique.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontendservice
            port:
              number: 80
